--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -20,9 +20,10 @@
         <select name="page" id="page-select"> </select>
       </div>
       <div id="filters">
-        <span>By reasonable price</span>
-        <span>By recently released</span>
-        <div id="brand">
+        <input type="checkbox" id="reasonable-price">
+        <label for="reasonable-price">By Reasonable Price</label>
+        <input type="checkbox" id="recently-released">
+        <label for="recently-released">By Recently Released</label>        <div id="brand">
           <label for="brand-select">By brands:</label>
           <select name="brand" id="brand-select"> </select>
         </div>
