--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -42,8 +42,12 @@
     <section id="indicators">
       <h2>Indicators</h2>
       <div>
-        <span>Number of products</span>
+        <span>Number of total products</span>
         <span id="nbProducts">0</span>
+      </div>
+      <div>
+        <span>Number of products displayed</span>
+        <span id="nbProductsDisplayed">0</span>
       </div>
       <div>
         <span>Number of new products</span>
