--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -55,15 +55,15 @@
       </div>
       <div>
         <span>p50 price value</span>
-        <span>0</span>
+        <span id="p50Value">0</span>
       </div>
       <div>
         <span>p90 price value</span>
-        <span>0</span>
+        <span id="p90Value">0</span>
       </div>
       <div>
         <span>p95 price value</span>
-        <span>0</span>
+        <span id="p95Value">0</span>
       </div>
       <div>
         <span>Last released date</span>
