--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -67,7 +67,7 @@
       </div>
       <div>
         <span>Last released date</span>
-        <span>2020-01-01</span>
+        <span id="last-released">2020-01-01</span>
       </div>
     </section>
     <section id="products"></section>
