--- a/client/v2/index.html
+++ b/client/v2/index.html
@@ -27,6 +27,8 @@
           <label for="brand-select">By brands:</label>
           <select name="brand" id="brand-select"> </select>
         </div>
+        <input type="checkbox" id="show-favorite">
+        <label for="favorite">Show Favorite Products</label> 
       </div>
       <div id="sort">
         <label for="sort-select">Sort:</label>
